# hyprland-toggle-tiling

./: .SRCINFO  CMakeLists.txt  Client.cpp  HyprlandService.cpp  HyprlandService.h  PKGBUILD  README.md  README.org  Workspace.cpp  default.nix  flake.nix  main.cpp
include/: Client.h  Client.hpp  FileService.h  HyprlandService.h  HyprlandService.hpp  Macros.h  Macros.hpp  ShellService.h  ShellService.hpp  WindowRule.h  Workspace.h
src/: Client.cpp  FileService.cpp  HyprlandService.cpp  ShellService.cpp  WindowRule.cpp  Workspace.cpp  main.cpp
